[package]
authors = ["Jeff Muizelaar <jmuizelaar@mozilla.com>"]
name = "type1-encoding-parser"
version = "0.1.1"
license = "MIT"
documentation = "https://docs.rs/crate/type1-encoding-parser/"
description = "A library to parse encodings from Type1 font files"
keywords = ["type1", "font", "pdf", "postscript", "encoding"]
repository = "https://github.com/jrmuizel/type1-encoding-parser"

[dependencies]
pom = "1.0.1"
